--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^30.0.5",
